# HOPS

./: .buildinfo  .gitignore  .gitmodules  AUTHORS.html  AUTHORS.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  acronyms.txt  authors.html  autogen.sh  calibration.txt  compiling.html  configure.ac  containers.txt  control.txt  degen_calibration.sh  degen_containers.sh  degen_control.sh  degen_difx.sh  degen_fringe.sh  degen_initialization.sh  degen_math.sh  degen_message.sh  degen_mk4.sh  degen_operators.sh  degen_plugins.sh  degen_utilities.sh  degen_vex2json.sh  difx.txt  fringe.txt  genindex.html  hops_config.h.cmake  hops_config.h.in  index.html  initialization.txt  introduction.html  license.html  (+15 more)
data/: Makefile.am  README.md  README.txt  chk_lookup.sh  import_3to4.sh  import_check.sh  import_from_hops3.sh
data/bootstrap/: import_3to4.sh  import_check.sh  legacy_nuke.sh  legacy_tar.sh  legacy_unpack.sh  legacy_update.sh  reporter.sh  req_report.sh  requirements.txt  status.txt
data/bootstrap/import_scripts/: brutal.sh  compare_src_dest.sh  import_adump.sh  import_aedit.sh  import_afio.sh  import_alist.sh  import_average.sh  import_cofit.sh  import_data.sh  import_dfio.sh  import_ffcontrol.sh  import_ffcore.sh  import_ffio.sh  import_ffmath.sh  import_ffplot.sh  import_ffsearch.sh  import_fftest.sh  import_fourfit.sh  import_fourmer.sh  import_fplot.sh  import_fringex.sh  import_hops.sh  import_legacy.sh  import_mk4util.sh  import_msg.sh  import_search.sh  import_snratio.sh  import_vex.sh
data/switches/: lookup.sh  provider.sh  template.sh  test_config.sh  test_envchk.sh
data/tarballs/LGPL/: readme.txt
data/tarballs/nonLGPL/: readme.txt
doc/: CMakeLists.txt  Makefile.am  docs-manifest.txt
doc/code_outline/: arch_overview.dia  code_outline.tex
doc/common/: Makefile.am  acronym.tex  acronyms.tex  appendix.tex  arch_overview.dia  code_outline.tex  help-with-bib.txt  hops.bib  shortcuts.tex
doc/common/uml-diagrams/: activity-diagram-example.uml  hops-component-diagram.uml  uml-description.tex
doc/covertest/: Makefile.am  benchmark.tex  component.tex  cotest.tex  coverage.tex  coverunit.tex  human.tex  integration.tex  manual.tex  oracle.tex  regress.tex  reports.tex  unit.tex
doc/developer/: authors.txt  autotools.txt  data_conversion.rst  layout.txt  readme.txt  style.txt
doc/develplan/: Makefile.am  designoutline.tex  doc_domain.txt  dplan.tex  managementprocess.tex  overview.tex  projectorganization.tex  proposedplan.tex
doc/gantt/: MSRI-HOPS-2021.gan  MSRI-HOPS.gan  MSRI-HOPS.xml
doc/geodetic/: Makefile.am  geodesy.tex  gintro.tex
doc/notes/: pgplot.txt  release.txt
doc/reference/: hops.doxygen.in
doc/reference/source/: AUTHORS.md  authors.rst  chapter1.rst  compiling.rst  conf.py  conf.py.in  index.rst  introduction.rst  license.rst
doc/requirements/: Makefile.am  hilo.tex  obsolete.tex  reqs.tex  theintro.tex  thereqs.tex  thereqs_old_DH20201120.tex  vfish-notes-on-HOPS-requirements.txt
doc/review/: hops_msri_review.tex
doc/review/response/: HOPS upgrade - Review tracking spreadsheet.xlsx
doc/specification/: CMakeLists.txt  Makefile.am  architecture.tex  externals.tex  hops-spec.tex  interfaces.tex  language.tex  legacy.tex  libraries.tex  objects.tex  parallel.tex  plotting.tex  specs.tex  srctree.tex
doc/specification/code/: MHO_ExtensibleElement.hh  MHO_NDArrayWrapper.hh  MHO_Operator.hh  array_use.cc  data-objects.hh  data-operators.hh  data_objects.hh  data_operators.hh  metadata-objects.hh  operator_use.cc  visibilities.hh
doc/specification/old/: hops-spec.tex
doc/tasking/: Makefile.am  overview-helper.sh  overview.tex  plantuml-class-transcriber.py  plantuml-gantt-transcriber.py  tasks.tex
doc/tasking/alltasks/: MHO_task_0000.txt  MHO_task_0001.txt  MHO_task_0010.txt  MHO_task_0100.txt  MHO_task_0200.txt  MHO_task_0210.txt  MHO_task_0300.txt  MHO_task_0305.txt  MHO_task_0307.txt  MHO_task_0310.txt  MHO_task_0311.txt  MHO_task_0312.txt  MHO_task_0313.txt  MHO_task_0314.txt  MHO_task_0315.txt  MHO_task_0316.txt  MHO_task_0330.txt  MHO_task_0331.txt  MHO_task_0332.txt  MHO_task_0333.txt  MHO_task_0334.txt  MHO_task_0335.txt  MHO_task_0336.txt  MHO_task_0337.txt  MHO_task_0338.txt  MHO_task_0350.txt  MHO_task_0370.txt  MHO_task_0380.txt  MHO_task_0390.txt  MHO_task_0400.txt  MHO_task_0500.txt  MHO_task_ZZZZ.txt  MHO_task_bubbles.pl  MHO_task_config.pl  MHO_task_inputs.txt  plantuml-class-transcriber.py  plantuml-code.uml  tasks-overview.uml
doc/tasking/alttasks/: MHO_task_0000.txt  MHO_task_0001.txt  MHO_task_0010.txt  MHO_task_0100.txt  MHO_task_0300.txt  MHO_task_0400.txt  MHO_task_0500.txt  MHO_task_bubbles.pl  MHO_task_config.pl  MHO_task_inputs.txt
doc/tasking/apptasks/: APP_task.txt  APP_task_bubbles.pl  APP_task_config.pl  APP_task_inputs.txt
doc/tasking/mhotasks/: MHO_task.txt  MHO_task_bubbles.pl  (+2 more)
doc/testreports/: Makefile.am  treps.tex
doc/texcheck/: Makefile.am  check.tex
doc/texmiss/: Makefile.am
doc/userman/: Makefile.am  man.tex
doc/vhelp/: aedit.doc  average.doc  cohfit.doc  fourfit.doc  fplot.doc  fringex.doc  scripts.doc
source/bash_src/: CMakeLists.txt  Makefile.am  alma-vex-defs.py.in  clang_format.sh  cohfit-driver.sh  coverage_badge.sh  est_manual_phases.py.in  git-revision.sh  hops-build-ci-curie-hops3-as-c.sh  hops-build-ci-curie.sh  hops-build-ci-generic.sh  hops.bash.in  hops_vex2ovex.py.in  hopsenv.sh.cmake  vhelp.sh.in
source/c_src/: CMakeLists.txt  Makefile.am  Makefile.in
source/cpp_src/: .clang-format  CMakeLists.txt  Makefile.am  hops_version.hh  hops_version.hh.cmake
source/perl_src/: CMakeLists.txt  adhoc-baseline.pl
source/python_src/: CMakeLists.txt  Makefile.am  setup-deps.py.in  setup-no-deps.py.in  setup.py.in
test_data/: CMakeLists.txt  SHA256SUMS.txt  chk_cmake_env.sh  download_difx_tarball.sh.in  download_tarball.sh.in  download_tarball2.sh.in  download_tarball3.sh.in  test_hops_consumer.sh.in  testdata_checksum_verify.sh.in  testdata_download_all.sh.in
test_data/consumer_smoke_test/: CMakeLists.txt  test_consumer.cc
(+8790 files in other folders)
